Retail Lending-Production/src/objects/Commission_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Payment__c</fullName>
        <label>Commission Payment</label>
        <referenceTo>Commission_Setting__c</referenceTo>
        <relationshipLabel>Commission Payments</relationshipLabel>
        <relationshipName>Commission_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Date__c</fullName>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnPaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Commission Payment</label>
    <nameField>
        <label>Commission Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>